[gd_scene load_steps=3 format=3 uid="uid://dbj5k5er4lk2x"]

[ext_resource type="Theme" uid="uid://fdwpyy0l4elb" path="res://menu/themes/default_theme.tres" id="1_gk0fi"]
[ext_resource type="Script" path="res://menu/main_menu.gd" id="2_x34al"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gk0fi")
script = ExtResource("2_x34al")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game name"
horizontal_alignment = 1

[node name="Host" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host game"

[node name="Join" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join game"

[node name="AddressEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Enter address"
alignment = 1

[node name="PortEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9998"
placeholder_text = "Enter port"
alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player edit"
horizontal_alignment = 1

[node name="UsernameEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter username"
alignment = 1

[node name="ColorEntry" type="ColorPickerButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player color"
edit_alpha = false

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
